kubernetes/postgres-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-postgres
  labels:
    name: database
spec:
  replicas: 1
  selector:
    matchLabels:
      service: example-postgres
  template:
    metadata:
      labels:
        service: example-postgres
    spec:
      serviceAccountName: registry
      containers:
        - name: example-db
          image: docker.pkg.github.com/dveleztx/baseline-fastapi-stack-in-minikube/example-api:db
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
