kubernetes/fastapi-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: example-api
  labels:
    name: backend
spec:
  selector:
    app: example-api
  ports:
    - protocol: "TCP"
      port: 5000
      targetPort: 5000
