kubernetes/postgres-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: example-postgres
  labels:
    service: database
spec:
  selector:
    service: example-postgres
  ports:
    - protocol: "TCP"
      port: 5432
