kubernetes/minikube-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minikube-ingress
spec:
  rules:
  - host: "example.api"
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: example-api
            port:
              number: 5000
